2004-09-30  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (mips_insn16_frame_cache): Remove dead code or
	conditions that will always be true.

2004-09-30  Mark Kettenis  <kettenis@gnu.org>

	* vaxbsd-nat.c: Include "target,h" and "inf-ptrace.h".
	(vaxbsd_fetch_inferior_registers): Rename from
	fetch_inferior_registers.  Make static.
	(vaxbsd_store_inferior_registers): Rename from
	store_inferior_registers.  Make static.
	(_initialize_vaxbsd_nat): Construct and add target vector.
	* config/vax/nbsdaout.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o.  Add inf-child.o and inf-ptrace.o.
	* config/vax/nbsdelf.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o.  Add inf-child.o and inf-ptrace.o.
	(NAT_FILE): Remove.
	* config/vax/obsd.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o.  Add inf-child.o and inf-ptrace.o.
	(NAT_FILE): Remove.
	* Makefile.in (vaxbsd-nat.o): Update dependencies.

	* m88kbsd-nat.c: Include "target.h" and "inf-ptrace.h".
	(m88kbsd_fetch_inferior_registers): Rename from
	fetch_inferior_registers.  Make static.
	(m88kbsd_store_inferior_registers): Rename from
	store_inferior_registers.  Make static.
	(_initialize_m88kbsd_nat): New prototype and function.
	* config/m88k/obsd.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o.  Add inf-child.o and inf-ptrace.o.
	(NAT_FILE): Remove.
	* Makefile.in (m88kbsd-nat.o): Update dependencies.

2004-09-30  Andrew Cagney  <cagney@gnu.org>

	* target.c (target_xfer_partial): New function.
	(target_read_memory_partial, target_write_memory_partial) 
	(default_xfer_partial, target_read_partial, target_write_partial) 
	(xfer_using_stratum): Use.
	(debug_to_xfer_partial): Delete function.
	(setup_target_debug): Do not override to_xfer_partial.

2004-09-30  Mark Kettenis  <kettenis@chello.nl>

	* fork-child.c: Update copyright year.  Fix coding style.

2004-09-29  Mark Kettenis  <kettenis@gnu.org>

	* defs.h (msavestring, mstrsave): Remove prototypes.